[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy/enemy.png" type="Texture" id=1]
[ext_resource path="res://enemy/enemy.gd" type="Script" id=2]
[ext_resource path="res://enemy/vision_cone.gd" type="Script" id=4]
[ext_resource path="res://enemy/patrolling_state.gd" type="Script" id=5]
[ext_resource path="res://enemy/light_cone.gdshader" type="Shader" id=6]
[ext_resource path="res://enemy/light.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=2]
radius = 23.0868

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 6 )

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Viewport")

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="PatrollingState" type="Node" parent="."]
script = ExtResource( 5 )
enemy_path = NodePath("..")
rotation_time = 3.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 512, 1024 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="ColorRect" type="ColorRect" parent="Viewport"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VisionCone" type="Area2D" parent="."]
scale = Vector2( 1, 0.789 )
script = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionCone"]
polygon = PoolVector2Array( -192, -542, -25, -9, 24, -9, 195, -542 )

[node name="Light2D" type="Light2D" parent="VisionCone"]
position = Vector2( 2, -304.826 )
scale = Vector2( 0.8125, 0.565619 )
texture = SubResource( 6 )
shadow_enabled = true
script = ExtResource( 7 )
good_color = Color( 1, 1, 1, 1 )
bad_color = Color( 1, 0, 0, 1 )

[connection signal="patrolling_path_found" from="." to="PatrollingState" method="_on_patrolling_path_found"]
[connection signal="detected" from="VisionCone" to="." method="_on_detected"]
[connection signal="detection_progress_changed" from="VisionCone" to="VisionCone/Light2D" method="_on_detection_progress_changed"]
[connection signal="seen_end" from="VisionCone" to="." method="_on_seen_end"]
[connection signal="seen_start" from="VisionCone" to="." method="_on_seen_start"]
